# datastream

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
datastream/: __init__.py  base.py  deserializing.py  serializing.py  twoway.py
tests/: test_read.py  test_write.py
